--- a/src/scss/_mixins.scss
+++ b/src/scss/_mixins.scss
@@ -1,4 +1,4 @@
-@mixin button($color: green){
+@mixin button($color: green) {
   height: 24px;
   min-width: 24px;
   padding: 3px;
@@ -7,24 +7,23 @@
   display: inline-block;
   color: rgba(0, 0, 0, .7);
 
-  i{
+  & i {
     font-size: 18px;
   }
 
-  &:active, &.active{
+  &:active, &.active {
     color: $color;
   }
 
-  &:hover{
+  &:hover {
     background: #eee;
     cursor: pointer;
   }
-
 }
 
-@mixin clear-list(){
-  list-style: none;
-  padding: 0;
-  margin: 0;
 
+@mixin clear-list() {
+  list-style: none;
+  margin: 0;
+  padding: 0;
 }
