--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -1,7 +1,7 @@
 @import "variables";
 @import "mixins";
 
-.excel__header{
+.excel__header {
   position: absolute;
   top: 0;
   right: 0;
@@ -11,10 +11,10 @@
   display: flex;
   justify-content: space-between;
 
-  .input{
+  & .input {
+    margin: 0;
     padding: 2px 7px;
     min-width: 1px;
-    margin: 0;
     color: #000;
     border: 1px solid transparent;
     border-radius: 2px;
@@ -23,19 +23,17 @@
     line-height: 22px;
     outline: none;
 
-    &:hover{
+    &:hover {
       border: 1px solid $border-color;
     }
 
-    &:focus{
+    &:focus {
       border: 2px solid #1a73e8;
     }
-
   }
 
-  .button{
+  .button {
     @include button(red);
   }
-
 
 }
