--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -1,5 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Roboto&display=swap');
 @import "~normalize.css";
-@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 
 @import "header";
 @import "toolbar";
@@ -13,7 +13,6 @@
   box-sizing: border-box;
 }
 
-
 body {
   font-family: 'Roboto', sans-serif;
   font-size: 12px;
@@ -26,3 +25,5 @@ body {
   max-width: 100%;
   font-size: .8rem;
 }
+
+
